--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "merge": "^2.1.1",
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
